Use correct JSON property for owner name on mobile

--- a/portal-frontend/src/app/features/home/inbox/inbox-list/inbox-list.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox-list/inbox-list.component.html
@@ -7,7 +7,7 @@
       hoverable: result.routerLink
     }"
   >
-    <div class="subheading2">{{ result.fileNumber }} - {{ result.applicant ?? '(Unknown)' }}</div>
+    <div class="subheading2">{{ result.fileNumber }} - {{ result.ownerName ?? '(Unknown)' }}</div>
     <div>Created: {{ result.createdAt | momentFormat }}</div>
     <div [title]="result.type">{{ result.type }}</div>
     <div
