LFNG Return Fixes
* Clear submission date when returning to applicant
* Clean up logic for banners and show ALC banner when return to LFNG
* Remove old applicant field and mark owner optional

--- a/portal-frontend/src/app/features/applications/view-submission/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/applications/view-submission/alc-review/alc-review.component.html
@@ -15,30 +15,13 @@
       </button>
     </div>
   </div>
-  <div
-    *ngIf="
-      application.status.code === SUBMISSION_STATUS.IN_PROGRESS ||
-      application.status.code === SUBMISSION_STATUS.IN_REVIEW_BY_LG ||
-      application.status.code === SUBMISSION_STATUS.INCOMPLETE ||
-      application.status.code === SUBMISSION_STATUS.WRONG_GOV ||
-      application.status.code === SUBMISSION_STATUS.SUBMITTED_TO_LG
-    "
-    class="warning"
-  >
+  <div *ngIf="showUpdateAfterSubmitLabel" class="warning">
     This section will update after the application is submitted to the ALC.
   </div>
   <div *ngIf="application.status.code === SUBMISSION_STATUS.REFUSED_TO_FORWARD_LG" class="warning">
     Application not subject to Agricultural Land Commission review.
   </div>
-  <div
-    *ngIf="
-      application.status.code === SUBMISSION_STATUS.SUBMITTED_TO_ALC ||
-      application.status.code === SUBMISSION_STATUS.SUBMITTED_TO_ALC_INCOMPLETE ||
-      application.status.code === SUBMISSION_STATUS.RECEIVED_BY_ALC ||
-      application.status.code === SUBMISSION_STATUS.IN_REVIEW_BY_ALC ||
-      application.status.code === SUBMISSION_STATUS.ALC_DECISION
-    "
-  >
+  <div *ngIf="showALCSection">
     <app-decisions [fileNumber]="application.fileNumber"></app-decisions>
     <app-submission-documents [$applicationDocuments]="$applicationDocuments"></app-submission-documents>
   </div>
