Add INCG to L/FNG inbox statuses
* Allow  L/FNG to see INCG even when Submitted Date is not set.
* Add !important to beat material

--- a/portal-frontend/src/app/features/home/inbox/inbox.component.scss
+++ b/portal-frontend/src/app/features/home/inbox/inbox.component.scss
@@ -30,7 +30,7 @@ a {
   }
 
   .mat-expansion-panel {
-    box-shadow: none;
+    box-shadow: none !important;
   }
 
   .mat-expansion-panel-header-title {
