add parcel interaction UX update

--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.scss
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.scss
@@ -11,6 +11,10 @@
   margin: rem(8) 0 !important;
 }
 
+.owner-search-option {
+  margin: rem(8) 0 !important;
+}
+
 .link-text {
   color: colors.$link-color;
   text-decoration: underline;
