--- a/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.html
+++ b/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.html
@@ -4,6 +4,9 @@
 </div>
 <div mat-dialog-content>
   <form [formGroup]="form">
+    <app-warning-banner *ngIf="isEdit" class="full-row error" class="changes-banner">
+      The changes made to this owner will be reflected across the submission.
+    </app-warning-banner>
     <div class="form-row">
       <div class="full-row">
         <mat-label for="type">Owner Type</mat-label>
@@ -102,7 +105,10 @@
   </form>
 </div>
 <div mat-dialog-actions class="actions">
-  <button mat-stroked-button (click)="onClose()">Cancel</button>
-  <button mat-flat-button color="primary" *ngIf="!isEdit" (click)="onCreate()">Add</button>
-  <button mat-flat-button color="primary" *ngIf="isEdit" (click)="onSave()">Save</button>
+  <button *ngIf="isEdit" mat-stroked-button color="warn" style="margin-right: auto;" class="delete-btn" (click)="onDelete()">Delete Owner</button>
+  <div class="btn-group">
+    <button mat-stroked-button (click)="onClose()" style="margin-left: auto;">Cancel</button>
+    <button mat-flat-button color="primary" *ngIf="!isEdit" (click)="onCreate()">Add</button>
+    <button mat-flat-button color="primary" *ngIf="isEdit" (click)="onSave()">Save</button>
+  </div>
 </div>
