--- a/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.scss
+++ b/portal-frontend/src/app/shared/owner-dialogs/owner-dialog/owner-dialog.component.scss
@@ -2,9 +2,22 @@
 @use '../../../../styles/colors';
 
 .actions {
+  display: flex;
+  justify-content: space-between;
   button:not(:last-child) {
     margin-right: rem(8) !important;
   }
+}
+
+:host::ng-deep {
+  .warning-banner {
+    padding: 0.5rem !important;
+  }
+}
+
+
+.mat-button-toggle-checked.mat-button-toggle-appearance-standard {
+  background-color: colors.$primary-color-light;
 }
 
 :host::ng-deep {
@@ -16,4 +29,8 @@
     align-items: center;
     margin-top: rem(4);
   }
+}
+
+.delete-btn {
+  order: -1;
 }
