--- a/portal-frontend/src/app/features/home/inbox/inbox.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox.component.html
@@ -103,7 +103,7 @@
       <mat-spinner></mat-spinner>
     </div>
     <mat-tab-group *ngIf="!isLoading" mat-align-tabs="start" mat-stretch-tabs #searchResultTabs>
-      <mat-tab>
+      <mat-tab label="applications">
         <ng-template mat-tab-label> Applications: {{ applicationTotal }} </ng-template>
         <app-inbox-list
           *ngIf="isMobile"
@@ -122,7 +122,7 @@
         ></app-inbox-table>
       </mat-tab>
 
-      <mat-tab>
+      <mat-tab label="nois">
         <ng-template mat-tab-label> Notice of Intent: {{ noticeOfIntentTotal }} </ng-template>
         <app-inbox-list
           *ngIf="isMobile"
@@ -141,7 +141,7 @@
         ></app-inbox-table>
       </mat-tab>
 
-      <mat-tab>
+      <mat-tab label="srws">
         <ng-template mat-tab-label> Notification of SRW: {{ notificationTotal }} </ng-template>
         <app-inbox-list
           *ngIf="isMobile"
