--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -14,6 +14,6 @@
     </div>
   </div>
   <div class="navigation">
-    <app-inbox [currentTab]="currentTab"></app-inbox>
+    <app-inbox [currentTabName]="currentTabName"></app-inbox>
   </div>
 </div>
