--- a/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
@@ -43,7 +43,7 @@
 
       <ng-container matColumnDef="lastUpdated">
         <th mat-header-cell *matHeaderCellDef>Last Updated</th>
-        <td mat-cell *matCellDef="let row">{{ row.lastUpdate | date }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.lastUpdate | momentFormat }}</td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
