--- a/portal-frontend/src/app/features/applications/view-submission/lfng-review/lfng-review.component.html
+++ b/portal-frontend/src/app/features/applications/view-submission/lfng-review/lfng-review.component.html
@@ -36,13 +36,25 @@
   </div>
   <div
     *ngIf="
-      application.status.code === SUBMISSION_STATUS.IN_PROGRESS ||
+      (application.status.code === SUBMISSION_STATUS.IN_PROGRESS ||
       application.status.code === SUBMISSION_STATUS.WRONG_GOV ||
-      application.status.code === SUBMISSION_STATUS.INCOMPLETE
+      application.status.code === SUBMISSION_STATUS.INCOMPLETE) &&
+      !isTurOrCov
     "
     class="warning"
   >
     <mat-icon>info</mat-icon>This section will update after the application is submitted.
+  </div>
+  <div
+    *ngIf="
+      (application.status.code === SUBMISSION_STATUS.IN_PROGRESS ||
+      application.status.code === SUBMISSION_STATUS.WRONG_GOV ||
+      application.status.code === SUBMISSION_STATUS.INCOMPLETE ) &&
+      isTurOrCov
+    "
+    class="warning"
+  >
+    <mat-icon>info</mat-icon>Application not subject to Local/First Nation Government review.
   </div>
   <div *ngIf="!applicationReview && submittedToAlcStatus" class="warning">
     <mat-icon>info</mat-icon>Application not subject to Local/First Nation Government review.
