--- a/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
@@ -11,7 +11,9 @@
 
       <ng-container matColumnDef="fileNumber">
         <th mat-header-cell *matHeaderCellDef>{{ type }} ID</th>
-        <td mat-cell *matCellDef="let row">{{ row.fileNumber }}</td>
+        <td mat-cell *matCellDef="let row">
+          <a [routerLink]="row.routerLink" *ngIf="row.routerLink">{{ row.fileNumber }}</a>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="dateCreated">
