search pagination from 0

--- a/portal-frontend/src/app/features/public/search/public-search.component.html
+++ b/portal-frontend/src/app/features/public/search/public-search.component.html
@@ -145,6 +145,7 @@
           [results]="applications"
           [totalCount]="applicationTotal"
           [statuses]="statuses"
+          [pageIndex]="pageIndex"
           (loadMore)="onLoadMore('APP')"
         >
         </app-search-list>
@@ -163,6 +164,7 @@
           *ngIf="isMobile"
           type="notices of intent"
           [results]="noticeOfIntents"
+          [pageIndex]="pageIndex"
           [totalCount]="noticeOfIntentTotal"
           [statuses]="statuses"
           (loadMore)="onLoadMore('NOI')"
@@ -183,6 +185,7 @@
           *ngIf="isMobile"
           type="notifications"
           [results]="notifications"
+          [pageIndex]="pageIndex"
           [totalCount]="notificationTotal"
           [statuses]="statuses"
           (loadMore)="onLoadMore('NOTI')"
