Replace 'srws' home route with 'notifications'

--- a/portal-frontend/src/app/features/home/inbox/inbox.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox.component.html
@@ -141,7 +141,7 @@
         ></app-inbox-table>
       </mat-tab>
 
-      <mat-tab label="srws">
+      <mat-tab label="notifications">
         <ng-template mat-tab-label> Notification of SRW: {{ notificationTotal }} </ng-template>
         <app-inbox-list
           *ngIf="isMobile"
