--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -204,7 +204,7 @@
   <section *ngIf="enableOwners" class="container">
     <h6>Parcel Owners</h6>
     <ng-container *ngIf="!isCrownLand">
-      <p>Add an owner for every organization or individual listed on the parcel's Certification of Title</p>
+      <p>Add an owner for every organization or individual listed on the parcel's Certificate of Title</p>
       <div>
         <app-parcel-owners
           [isDraft]="isDraft"
