--- a/portal-frontend/src/app/shared/owner-dialogs/parcel-owners/parcel-owners.component.html
+++ b/portal-frontend/src/app/shared/owner-dialogs/parcel-owners/parcel-owners.component.html
@@ -43,7 +43,7 @@
             element.corporateSummary.fileName
           }}</a>
           <div class="no-data" *ngIf="!element.corporateSummary">
-            <div class="text">Not Applicable</div>
+            <div class="no-data-text">Not Applicable</div>
           </div>          
         </div>
       </td>
