--- a/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/parcel/parcel.component.scss
@@ -1,4 +1,5 @@
 @use '../../../../../styles/functions' as *;
+@use '../../../../../styles/colors';
 
 .parcel-header {
   display: flex;
@@ -40,4 +41,8 @@
 
 .crown-land {
   text-transform: capitalize;
+}
+
+.no-data-text {
+  color: colors.$grey-dark;
 }
