--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/parcel/parcel.component.html
@@ -89,9 +89,7 @@
           <a *ngIf="owner.corporateSummary" (click)="onOpenFile(owner.corporateSummary.uuid)">{{
             owner.corporateSummary.fileName
           }}</a>
-          <div class="no-data" *ngIf="!owner.corporateSummary">
-            <div class="no-data-text">Not Applicable</div>
-          </div>
+          <app-no-data *ngIf="!owner.corporateSummary"></app-no-data>
         </div>
       </ng-container>
     </div>
