--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
@@ -98,9 +98,7 @@
           <a *ngIf="owner.corporateSummary" (click)="openFile(owner.corporateSummary)">{{
             owner.corporateSummary.fileName
           }}</a>
-          <div class="no-data" *ngIf="!owner.corporateSummary">
-            <div class="no-data-text">Not Applicable</div>
-          </div>
+          <app-no-data *ngIf="!owner.corporateSummary"></app-no-data>
         </div>
       </ng-container>
     </div>
