Update not setup government message
* Remove a banner from step 5

--- a/portal-frontend/src/app/features/applications/edit-submission/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/select-government/select-government.component.html
@@ -41,8 +41,10 @@
   </div>
 </form>
 <app-warning-banner *ngIf="showWarning" class="full-row">
-  This Local/First Nation Government has not yet been set up with the ALC Portal to receive applications. To submit, you
-  will need to contact the ALC directly: &nbsp;<a href="mailto:ALC.Portal@gov.bc.ca">ALC.Portal@gov.bc.ca</a
+  This local/First Nation government is not set up with the ALC Portal to receive submissions. You can continue to fill
+  out the form but you will be unable to submit. Please contact the ALC directly as soon as possible: &nbsp;<a
+    href="mailto:ALC.Portal@gov.bc.ca"
+    >ALC.Portal@gov.bc.ca</a
   >&nbsp;/&nbsp;<a href="tel:236-468-3342">236-468-3342</a>
 </app-warning-banner>
 <app-warning-banner *ngIf="selectedOwnGovernment && requiresGovernmentReview" class="full-row">
