--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.html
@@ -91,10 +91,11 @@
       {{ localGovernment?.name }}
       <app-no-data [showRequired]="showErrors" *ngIf="!localGovernment"></app-no-data>
       <app-warning-banner *ngIf="showErrors && localGovernment && !localGovernment.hasGuid" class="full-row error">
-        This Local/First Nation Government has not yet been set up with the ALC Portal to receive applications. To
-        submit, you will need to contact the ALC directly: &nbsp;<a href="mailto:ALC.Portal@gov.bc.ca"
-          >ALC.Portal@gov.bc.ca</a
-        >&nbsp;/&nbsp;<a href="tel:236-468-3342">236-468-3342</a>
+        This local/First Nation government is not set up with the ALC Portal to receive submissions. You can continue to
+        fill out the form but you will be unable to submit. Please contact the ALC directly as soon as possible:
+        &nbsp;<a href="mailto:ALC.Portal@gov.bc.ca">ALC.Portal@gov.bc.ca</a>&nbsp;/&nbsp;<a href="tel:236-468-3342"
+          >236-468-3342</a
+        >
       </app-warning-banner>
       <app-warning-banner
         *ngIf="
