--- a/portal-frontend/src/app/features/create-submission-dialog/create-submission-dialog.component.scss
+++ b/portal-frontend/src/app/features/create-submission-dialog/create-submission-dialog.component.scss
@@ -13,6 +13,10 @@
 
 .radio-option {
   display: block !important;
+
+  & .mdc-label {
+    cursor: pointer !important;
+  }
 }
 
 .dialog-content-wrapper {
