--- a/portal-frontend/src/app/features/applications/edit-submission/change-application-type-dialog/change-application-type-dialog.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/change-application-type-dialog/change-application-type-dialog.component.html
@@ -14,7 +14,7 @@
     </div>
 
     <div [ngClass]="{ 'display-none': stepIdx !== applicationTypeStep }">
-      <div class="step-description">Select an option to learn more about the application type.</div>
+      <div class="subheading2 step-description">Select an option to learn more about the application type.</div>
       <mat-radio-group class="app-type-radio-group" (change)="onAppTypeSelected($event)" color="primary" required>
         <mat-radio-button *ngFor="let appType of applicationTypes" [value]="appType.code" class="radio-option">
           {{ appType.portalLabel }}
