owner deleting fix

--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -214,6 +214,7 @@
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
           (onOwnerRemoved)="onOwnerRemoved($event)"
+          (onOwnersDeleted)="onOwnerRemoved($event)"
           [documentService]="applicationDocumentService"
           [ownerService]="applicationOwnerService"
           [disabled]="_disabled"
