--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-entry/parcel-entry.component.html
@@ -349,6 +349,7 @@
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
           (onOwnerRemoved)="onOwnerRemoved($event)"
+          (onOwnersDeleted)="onOwnerRemoved($event)"
           [disabled]="_disabled"
           [isCrown]="true"
           [ownerService]="noticeOfIntentOwnerService"
